# scala-project

./: .gitignore  README.md  build.sbt  docker-compose.yml
.bsp/: sbt.json
db-init/: init.sql
python-src/: Dockerfile  background.py  entrypoint.sh  main.py  pyproject.toml
scala/: Dockerfile  build.sbt
scala/src/main/resources/static/: index.html
scala/src/main/scala/app/: ServerApp.scala
scala/src/main/scala/config/: AppConfig.scala
scala/src/main/scala/dbClient/: PsqlClient.scala  objects.scala
scala/src/main/scala/db_client/: PsqlClient.scala  objects.scala
scala/src/main/scala/endpoints/: Endpoints.scala
scala/src/main/scala/errors/: errors.scala
scala/src/main/scala/interfaces/: ImageStorage.scala
src/main/scala/app/: ApiResponse.scala  ServerApp.scala
src/main/scala/config/: AppConfig.scala
src/main/scala/db_client/: PsqlClient.scala  objects.scala
src/main/scala/endpoints/: Endpoints.scala
src/main/scala/errors/: errors.scala
src/main/scala/interfaces/: ImageStorage.scala
